--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A game built in about 2 hours</title>
+    <script src="./resources/script/timer.js"></script>
     <script src="./resources/script/inputs.js"></script>
     <script src="./resources/script/audio.js"></script>
     <script src="./resources/script/loop.js"></script>
